[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s1proc"
version = "0.1.0"
description = "GPU-accelerated Sentinel-1 SAR processing tools"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ke Wang", email = "kewang@utexas.edu" }]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "numba>=0.58",
    "matplotlib>=3.8",
    "tyro>=0.9",
    "tqdm>=4"
]

# without this, the package installs, but installed binaries may not be copied
# into wheel layout
[tool.setuptools.packages.find]
include = ["s1proc*"]

[tool.setuptools.package-data]
s1proc = ["bin/*"]

[project.scripts]
s1proc = "s1proc.cli:main"
