[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s1proc"
version = "0.1.0"
description = "GPU-accelerated Sentinel-1 SAR processing tools"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ke Wang", email = "kewang@utexas.edu" }]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "numba>=0.58",
    "matplotlib>=3.8",
    "requests>=2.31",
    "tyro>=0.9",
    "tqdm>=4",
    "pyaps3>=0.3.7",
    "sentineleof>=0.12.0",
    "sardem>=0.13.0",
    "gdal>=3.10",
    "zarr>=2.18.3",
    "dacite>=1.9.2",
    "ruamel.yaml>=0.18.0",
    "platformdirs>=4.0"
]

[tool.setuptools.packages.find]
include = ["s1proc*"]

[tool.setuptools.package-data]
s1proc = ["bin/*", "*.so", "*.pyd", "*.dll"]

[project.scripts]
s1proc = "s1proc.cli:main"

[tool.ruff]
# 每行的最大长度
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# 激活默认的检查规则（E: 错误, F: 规则, I: 导入顺序）
select = ["E", "F", "I"]

[tool.ruff.format]
# 强制使用双引号（类似 Black 风格）
quote-style = "double"